feat(engine): survive a real swarm
Debian 13.6.0 netinst, 755 MB in 368 seconds, SHA-256 matching the one
Debian publishes. Zero pinned carriers over 80 496 socket reads, 8 MB of
live heap, no allocation on the block path.

Four defects, none of them visible to a local swarm: the tracker client
asked for HTTP/2 and bttracker.debian.org cannot answer that; a dial had
no timeout, so dead addresses held connection slots for minutes; a request
nobody answered was held for ever, which stopped the download dead; and
the session's state was shared across carriers, which a single-threaded
test dispatcher had hidden behind 116 green tests.

Closes B-19.